--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h2 {
 
 .password-wrapper input {
     width: 100%;
-    padding-right: 40px;
+    padding-right: 40px; /* To make space for eye icon */
 }
 
 .password-wrapper .toggle-password {
