--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    background: linear-gradient(135deg, #7b25c2, #2596d8);
     color: white;
     transition: background 0.5s, color 0.5s;
 }
